--- a/Web/src/app/components/advisor/top-experts/top-experts.component.html
+++ b/Web/src/app/components/advisor/top-experts/top-experts.component.html
@@ -17,7 +17,7 @@
 </div>
 <div>
   <div *ngIf="resultsLimit > 0" class="access-button" (click)="goToTopExperts()">
-    ACCESS
+    FIND MORE
   </div>
   <div *ngIf="!resultsLimit && hasMoreExperts()" class="access-button" (click)="loadMoreExperts()">
     LOAD MORE
