--- a/Web/src/app/components/account/forgot-password-reset/forgot-password-reset.component.html
+++ b/Web/src/app/components/account/forgot-password-reset/forgot-password-reset.component.html
@@ -1,5 +1,5 @@
-<p>
-  forgot-password-reset works!
-</p>
-<input [(ngModel)]="recoverPasswordRequest.password" placeholder="Password">
-<button (click)="send()">SEND</button>
+<div fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="20px">
+  <inheritance-input #Password [options]="getPasswordOptions()" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"
+    [value]="recoverPasswordRequest.password" (onChange)="recoverPasswordRequest.password = $event"></inheritance-input>
+  <button class="btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="send()" [promiseBtn]="promise">Send</button>
+</div>
