--- a/Web/src/app/components/account/configuration/configuration.component.html
+++ b/Web/src/app/components/account/configuration/configuration.component.html
@@ -1,9 +1,8 @@
-<p>Registered wallet</p>
-<div fxLayout="row" fxLayoutGap="20px">
-    <input disabled readonly [(ngModel)]="wallet" type="text" />
+<div fxLayout="column" fxLayoutAlign="space-evenly center" fxLayoutGap="15px">
+    <inheritance-input #Wallet [options]="getWalletOptions()" [value]="wallet" ngClass.xs="input-modal-mobile" ngClass.sm="input-modal-tablet" ngClass.gt-sm="input-modal-web"></inheritance-input>
+    <p>Receive an email notification when a new tip is sent by some expert or asset that you are following</p>
+    <mat-checkbox required [(ngModel)]="configurationRequest.allowNotifications">Allow notifications</mat-checkbox>
 </div>
-<p>Allow email notification when a new tip is sent by some expert or asset that you are following</p>
-<div fxLayout="row" fxLayoutGap="20px">
-    <input mat-checkbox [(ngModel)]="configurationRequest.allowNotifications" type="checkbox" />
+<div fxLayout="column" fxLayoutAlign="space-evenly center">
+    <button class="btn-save btn-modal" ngClass.xs="btn-modal-mobile" ngClass.sm="btn-modal-tablet" ngClass.gt-sm="btn-modal-web" mat-flat-button (click)="save()" [promiseBtn]="promise">Save</button>
 </div>
-<button (click)="save()">SAVE</button>
