new home page design

--- a/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.css
+++ b/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.css
@@ -1,5 +1,5 @@
 .recommendation-box-container {
-    background-color: #d5d5d5;
+    background-color: #151515;
     display: grid;
 }
 
@@ -7,7 +7,7 @@
     text-align: center;
 }
 
-.access-button{
+.old-access-button{
     margin: 38px auto;
     width: 132px;
     height: 32px;
