--- a/Web/src/styles.css
+++ b/Web/src/styles.css
@@ -206,7 +206,8 @@ button.is-loading .btn-spinner {
 /*Angular promise button styles*/
 
 .section-title{
-  font-size: 25px;
+  text-transform: uppercase;
+  font-size: 40.5px;
   text-align: center;
   color: #FFFFFF;
   margin-top:36px;
