layout adjustment: access-button

--- a/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.html
+++ b/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.html
@@ -12,7 +12,7 @@
   </div>
   <div>
     <div class="access-button" (click)="accessRecommendations()">
-      ACCESS
+      SEE MORE
     </div>
   </div>
 </div>
