layout adjustment: section-subtitle

--- a/Web/src/styles.css
+++ b/Web/src/styles.css
@@ -214,9 +214,9 @@ button.is-loading .btn-spinner {
 }
 
 .section-subtitle{
-  font-size: 9px;
+  font-size: 14px;
   text-align: center;
-  color: #626262;
+  color: #ffffff;
   margin-top: 9px;
   margin-bottom: 35px;
 }
