--- a/Web/src/app/components/advisor/advisor-card/advisor-card.component.html
+++ b/Web/src/app/components/advisor/advisor-card/advisor-card.component.html
@@ -1,54 +1,63 @@
-<div (click)="goToExpertDetails()" class="advisor-card-container">
+<div class="advisor-card-container">
   <div class="top-border"></div>
-  <div class="card-header">
-    <div class="expert-picture">
-      <img [src]="getAdvisorImgUrl()" onerror="this.style.display='none'">
-      <div class="expert-ranking">
-          {{advisor.ranking}}
-        </div>
-    </div>
-    <div class="expert-name">
-      {{advisor.name}}
-    </div>
-    <div class="expert-description">
-      {{advisor.description}}
-    </div>
-    <div class="expert-rating">
-      <bar-rating [theme]="'fontawesome-o'" [readOnly]="'true'" [rate]="advisor.rating" [title]="advisor.rating | number: '1.2-2'"></bar-rating>
-    </div>
-  </div>
-  <div class="expert-card-content">
-    <div class="expert-ranking-description">
-        Ranked #{{advisor.ranking}} out of {{advisorsLength}} experts
-    </div>
-    <div class="followed-by">
-      Followed by {{advisor.numberOfFollowers}} investors
-    </div>
-    <div class="separator"></div>
-    <div class="expert-rates">
-      <div class="success-rate-column">
-        <div class="success-rate">
-            {{advisor.successRate * 100 | number:'1.0-0'}}%
-        </div>
-        <div class="success-rate-description">Success Rate</div>
+  <div (click)="goToExpertDetails()" class="expert-details-div">
+    <div class="card-header">
+      <div class="expert-picture">
+        <img [src]="getAdvisorImgUrl()" onerror="this.style.display='none'">
+        <div class="expert-ranking">
+            {{advisor.ranking}}
+          </div>
       </div>
-      <div class="average-return-column">
-        <div class="average-return">
-            {{advisor.averageReturn * 100 | number:'1.1-1'}}%
-        </div>
-        <div class="average-return-description">Average Return</div>
+      <div class="expert-name">
+        {{advisor.name}}
+      </div>
+      <div class="expert-description">
+        {{advisor.description}}
+      </div>
+      <div class="expert-rating">
+        <bar-rating [theme]="'fontawesome-o'" [readOnly]="'true'" [rate]="advisor.rating" [title]="advisor.rating | number: '1.2-2'"></bar-rating>
       </div>
     </div>
-  </div>
-  <div class="recommendation-distribution">
-    <div class="buy-distribution">
-      Buy: {{getBuyRecommendationPercentage() | number:'1.1-1'}}%
+    <div class="expert-card-content">
+      <div class="expert-ranking-description">
+          Ranked #{{advisor.ranking}} out of {{advisorsLength}} experts
+      </div>
+      <div class="followed-by">
+        Followed by {{advisor.numberOfFollowers}} investors
+      </div>
+      <div class="separator"></div>
+      <div class="expert-rates">
+        <div class="success-rate-column">
+          <svg viewBox="0 0 36 36" class="circular-chart black">
+            <path class="circle"
+            [attr.stroke-dasharray]="advisor.successRate * 100 +', 100'"
+            
+              d="M18 2.0845
+                a 15.9155 15.9155 0 0 1 0 31.831
+                a 15.9155 15.9155 0 0 1 0 -31.831"
+            />
+            <text x="18" y="20.35" class="percentage">{{advisor.successRate * 100 | number:'1.0-0'}}%</text>
+          </svg>
+          <div class="success-rate-description">Success Rate</div>
+        </div>
+        <div class="average-return-column">
+          <div class="average-return">
+              {{advisor.averageReturn * 100 | number:'1.1-1'}}%
+          </div>
+          <div class="average-return-description">Average Return</div>
+        </div>
+      </div>
     </div>
-    <div class="close-distribution">
-      Close: {{getCloseRecommendationPercentage() | number:'1.1-1'}}%
-    </div>
-    <div class="sell-distribution">
-      Sell: {{getSellRecommendationPercentage() | number:'1.1-1'}}%
+    <div class="recommendation-distribution">
+      <div class="buy-distribution">
+        Buy: {{getBuyRecommendationPercentage() | number:'1.1-1'}}%
+      </div>
+      <div class="close-distribution">
+        Close: {{getCloseRecommendationPercentage() | number:'1.1-1'}}%
+      </div>
+      <div class="sell-distribution">
+        Sell: {{getSellRecommendationPercentage() | number:'1.1-1'}}%
+      </div>
     </div>
   </div>
   <div class="separator distribution-follow-divider"></div>
