--- a/Web/src/app/components/advisor/top-experts/top-experts.component.html
+++ b/Web/src/app/components/advisor/top-experts/top-experts.component.html
@@ -1,8 +1,5 @@
 <div class="section-title">
-  Top Experts
-</div>
-<div class="section-subtitle">
-  Follow the top experts and get the best recommendations!
+  TOP EXPERTS
 </div>
 <div class="section-filter" *ngIf="!hideFilters">
   <mat-form-field>
