--- a/Web/src/app/components/home/recommendation-box/recommendation-box.component.css
+++ b/Web/src/app/components/home/recommendation-box/recommendation-box.component.css
@@ -44,18 +44,30 @@
     background-color: #333333;
     color: #ffffff;
     font-size: 14.5px;
+    padding-left: 20px;
 }
 
 .recommendation-table td{
     color: #ffffff;
     background-color: #000000;
     font-size: 8.5px;
+    font-weight: 300;
+    line-height: 2.06;
+    letter-spacing: 0.2px;
+    border-bottom: solid 0.2px #959595;
+    padding: 14px 20px 11px;
+}
+
+
+
+.recommendation-table tr:last-child td{
+    border-bottom: none;
 }
 
 .table-cell-title{
     font-size: 14.5px;
-    font-weight: 800;
-    line-height: 1;
+    font-weight: 600;
+    letter-spacing: 0.4px;
 }
 
 .expert-rating{
@@ -68,4 +80,5 @@
     -ms-flex-align: center;
     align-items: center;
     margin: 4px 0;
+    font-size: 11px;
 }
