"see more" button on home page

--- a/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.html
+++ b/Web/src/app/components/home/recommendation-box-list/recommendation-box-list.component.html
@@ -11,7 +11,7 @@
     <recommendation-box [adviceType]="'CLOSE POSITION'" [adviceList]="closePositionAdvices"></recommendation-box>
   </div>
   <div>
-    <div class="access-button" (click)="accessRecommendations()">
+    <div class="access-button" (click)="goToTopAssets()">
       SEE MORE
     </div>
   </div>
