--- a/Web/src/app/components/asset/trending-asset-card/trending-asset-card.component.html
+++ b/Web/src/app/components/asset/trending-asset-card/trending-asset-card.component.html
@@ -1,28 +1,38 @@
-<div fxLayout="column" class="card-container">
-  <div fxLayout="row" fxLayoutAlign="space-between center">
-    <div fxLayout="column">
-      <div class="asset-code">
-        {{asset.code}}
+<div fxLayout="column"  [ngClass]="getCardColorClass()">
+  <div class="card-container" (click)="seeAllRatingsClick()">
+    <div fxLayout="row" fxLayoutAlign="space-between center">
+      <div fxLayout="row" fxLayoutGap="20px" fxLayoutAlign="left center">
+        <div class="asset-icon" fxFlex="50px">
+            <img [src]="getAssetImgUrl()">
+        </div>
+        <div fxLayout="column">
+          <div class="asset-code">
+            {{asset.code}}
+          </div>
+          <div class="asset-name">
+            {{asset.name}}
+          </div>
+        </div>
       </div>
-      <div class="asset-name">
-        {{asset.name}}
+      <div fxLayout="column">
+        <div class="asset-price">
+          {{asset.lastValue | currency}}
+        </div>
+        <percentage-display [value]="asset.variation24h"></percentage-display>
       </div>
     </div>
-    <div fxLayout="column">
-      <div class="asset-price">
-        {{asset.lastValue | currency}}
-      </div>
-      <percentage-display [value]="asset.variation24h"></percentage-display>
+    <div class="separator"></div>
+    <div class="general-recommendation">
+      {{getGeneralRecommendation()}}
     </div>
+    <div class="ratings-distribution" fxLayout="row">
+      <recommendation-distribution [data]="asset.recommendationDistribution"></recommendation-distribution>
+    </div>
+  </div>  
+  <div class="follow-link" *ngIf="asset.following" (click)="onUnfollowClick()"  fxLayout="row" fxLayoutAlign="center center">
+    Unfollow
   </div>
-  <div class="general-recommendation">
-    {{getGeneralRecommendation()}}
-  </div>
-  <div fxLayout="row" fxLayoutAlign="center center">
-    <recommendation-distribution [data]="asset.recommendationDistribution"></recommendation-distribution>
-  </div>
-  <div class="separator"></div>
-  <div fxLayout="row" fxLayoutAlign="center center">
-    <a (click)="seeAllRatingsClick()" >See all ratings on {{asset.code}}</a>
+  <div class="follow-link" *ngIf="!asset.following" (click)="onFollowClick()"  fxLayout="row" fxLayoutAlign="center center">
+    Follow
   </div>
 </div>
