--- a/Web/src/app/components/util/percentage-display/percentage-display.component.css
+++ b/Web/src/app/components/util/percentage-display/percentage-display.component.css
@@ -1,11 +1,11 @@
 :host{
     text-align: right;
-    font-size: 7px;
-    font-weight: 300;       
+    font-size: 13px;
+    font-weight: 100;       
 }
 
 .positive{
-    color: #18af3a;
+    color: #36af39;
 }
 
 .negative{
