--- a/Web/src/app/components/advisor/new-advice/confirm-advice-dialog/confirm-advice-dialog.component.html
+++ b/Web/src/app/components/advisor/new-advice/confirm-advice-dialog/confirm-advice-dialog.component.html
@@ -1,12 +1,12 @@
-<h2 mat-dialog-title>Confirm Advice</h2>
-<mat-dialog-content class="mat-typography">
-  Are you sure you want to create a {{getAdviceType()}} recommendation to {{data.assetName}}?
-</mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-button [mat-dialog-close]="false" mat-dialog-close>Cancel</button>
-  <button mat-button [mat-dialog-close]="true" cdkFocusInitial>Confirm</button>
-</mat-dialog-actions>
-
-<!-- Copyright 2018 Google Inc. All Rights Reserved.
-    Use of this source code is governed by an MIT-style license that
-    can be found in the LICENSE file at http://angular.io/license -->
+<button class="modal-close" [mat-dialog-close]="false" mat-dialog-close>&times;</button>
+<div fxLayout="column" fxLayoutAlign="center center" class="modal-container">
+  <h2 mat-dialog-title class="modal-title">Confirm recommendation</h2>
+  <mat-dialog-content class="modal-content">
+    <p>Are you sure?</p> 
+    <p><b>{{getAdviceType()}}</b> recommendation to <b>{{data.assetName}}</b></p>
+  </mat-dialog-content>
+  <mat-dialog-actions class="btn-actions">
+    <button mat-stroked-button fxFlex="50" [mat-dialog-close]="false" mat-dialog-close>Cancel</button>
+    <button mat-flat-button fxFlex="50" [mat-dialog-close]="true">Confirm</button>
+  </mat-dialog-actions>
+</div>
