--- a/Web/src/app/components/header/header.component.css
+++ b/Web/src/app/components/header/header.component.css
@@ -5,7 +5,7 @@
     display: flex;
 }
 
-:host > div{
+:host > div {
     display: flex;
     align-items: center;
 }
@@ -16,44 +16,87 @@
     margin-right: 20px;
 }
 
-a{
-    font-size: 12px;
-    color: #ffffff;
+a {
     text-decoration: none;
-    font-weight: 600;
-    padding-left: 12px;
-    padding-right: 12px;
-    cursor:pointer;
+    padding-left: 25px;
+    padding-right: 25px;
+    cursor: pointer;
+    height: 100%;
+    display: inline-flex;
+    align-items: center;
+    border-bottom: solid 2px #101010;
 }
 
 a:hover,
-a.active{
-    position: relative;
-    top: 3px;
-    padding-left: 12px;
-    padding-right: 12px;
+a.active {
+    border-bottom: solid 2px #ffffff;
 }
 
-a:hover::after,
-a.active::after{
-    content: "";
-    background-color: #f99d00;
-    width: calc(100% + 24px);
-    left: -12px;
-    bottom: -18px;
-    height: 6px;
-    position: relative;
-    display: block;
+a span {
+    font-size: 12px;
+    color: #ffffff;
+    font-weight: 600;
 }
 
-.menu{
+.menu {
     height:100%;
 }
 
-.separator{
+.separator {
     width: 1px;
-    height: 25px;
-    line-height: 25px;
+    height: 100%;
     text-align: center;
-    background-color: #ffffff;
+    background-color: #959595;
+}
+
+.search {
+    margin-left: 15px;
+    margin-right: 15px;
+}
+
+.signin {
+    font-size: 12px;
+    color: #ffffff;
+    font-weight: 600;
+    cursor: pointer;
+    text-decoration: underline;
+    padding-left: 15px;
+}
+
+.login {
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-style: solid;
+    border-width: 1px;
+    -webkit-border-image: 
+        -webkit-gradient(linear, 0 0, 0 100%, from(#07d1ff), to(#126efd)) 1 100%;
+        -webkit-border-image: 
+        -webkit-linear-gradient(#07d1ff, #126efd) 1 100%;
+        -moz-border-image:
+        -moz-linear-gradient(#07d1ff, #126efd) 1 100%;    
+        -o-border-image:
+        -o-linear-gradient(#07d1ff, #126efd) 1 100%;
+        border-image:
+        linear-gradient(to top, #07d1ff 1%, #126efd) 1 100%;
+    border-image-slice: 1;
+    font-size: 12px;
+    font-weight: 500;
+    text-align: center;
+    color: #07d1ff;
+    cursor: pointer;
+}
+
+::ng-deep .profile-menu {
+    background-color:  #101010;
+    box-shadow: 0 0 4px #959595;
+}
+
+::ng-deep .profile-menu-item {
+    font-family: 'Gilroy';
+    color: white;
+    font-size: 12px;
+    opacity: 0.9; 
+    border-top: solid 0.5px #959595 !important;
 }
