--- a/Web/src/app/components/util/global-search/global-search.component.html
+++ b/Web/src/app/components/util/global-search/global-search.component.html
@@ -1,15 +1,25 @@
-<mat-form-field>
-  <input type="text" matInput [(ngModel)]="inputText" placeholder="Search" (input)="onInputChanged($event.target.value)" [matAutocomplete]="auto">
-  <mat-autocomplete #auto="matAutocomplete" (optionSelected)="onSelectionChanged($event)">
-    <mat-optgroup label="Assets">
-      <mat-option *ngFor="let asset of searchResults.assets" [value]="asset">
+<mat-form-field floatLabel="never">
+  <mat-label class="search-label">Search for Expert or Coin</mat-label>
+  <input autocomplete="off" class="search-input" type="text" matInput [(ngModel)]="inputText" placeholder="Search for Expert or Coin" (input)="onInputChanged($event.target.value)" [matAutocomplete]="auto">
+  <mat-autocomplete class="search-autocomplete" #auto="matAutocomplete" (optionSelected)="onSelectionChanged($event)">
+    <mat-optgroup class="search-autocomplete-header" label="Assets" *ngIf="showAssets">
+      <mat-option class="search-autocomplete-option" *ngFor="let asset of searchResults.assets" [value]="asset">
+        <div class="search-autocomplete-option-div-img">
+          <img onerror="this.style.display='none'" height="17" width="17" [src]="getAssetImgUrl(asset.id)">
+        </div>
         {{asset.name}}
+        <div class="search-autocomplete-option-separation"></div>
       </mat-option>
     </mat-optgroup>
-    <mat-optgroup label="Experts">
-      <mat-option *ngFor="let expert of searchResults.advisors" [value]="expert">
+    <mat-optgroup class="search-autocomplete-header" label="Experts" *ngIf="showExperts">
+      <mat-option class="search-autocomplete-option" *ngFor="let expert of searchResults.advisors" [value]="expert">
+        <div class="search-autocomplete-option-div-img">
+          <img onerror="this.style.display='none'" height="17" width="17" [src]="getAdvisorImgUrl(expert.urlGuid)">
+        </div>
         {{expert.name}}
+        <div class="search-autocomplete-option-separation"></div>
       </mat-option>
     </mat-optgroup>
   </mat-autocomplete>
+  <mat-icon matSuffix class="search-icon">search</mat-icon>
 </mat-form-field>
