--- a/Web/src/styles.css
+++ b/Web/src/styles.css
@@ -342,3 +342,8 @@ textarea:read-only {
   max-width: 250px;
   min-width: 90px;
 }
+
+.mat-menu-content:not(:empty) {
+  padding-top: 0px !important;
+  padding-bottom: 0px !important;
+}
