--- a/Web/src/app/components/header/header.component.html
+++ b/Web/src/app/components/header/header.component.html
@@ -6,7 +6,7 @@
         <div class="separator"></div>
         <a routerLink="/top-assets" routerLinkActive="active"><span>TOP ASSETS</span></a>
         <div class="separator"></div>
-        <a routerLink="/about-us" routerLinkActive="active"><span>ABOUT US</span></a>
+        <a routerLinkActive="active" href="https://auctus.org/" target="_blank"><span>ABOUT US</span></a>
         <global-search class="search"></global-search>
         <span class="login" *ngIf="!isLogged()" (click)="login()">LOGIN</span>
         <span class="signin" *ngIf="!isLogged()" (click)="register()">SIGN IN</span>
