--- a/Web/src/app/components/util/top-loading/top-loading.component.css
+++ b/Web/src/app/components/util/top-loading/top-loading.component.css
@@ -3,5 +3,17 @@
     position: absolute;
     left: 0;
     width: 100%;
-    top: 0;
+    top: 63px;
+}
+
+::ng-deep .mat-progress-bar-fill::after {
+    background-color: #126efd;
+}
+
+::ng-deep .mat-progress-bar-buffer {
+    background: #07d1ff;
+}
+
+::ng-deep .mat-progress-bar {
+    border-radius: 1px;
 }
