--- a/Web/src/app/app.component.html
+++ b/Web/src/app/app.component.html
@@ -4,3 +4,4 @@
 </ng-http-loader>
 <simple-notifications [options]="notificationOptions"></simple-notifications>
 <router-outlet></router-outlet>
+<footer></footer>
