--- a/Web/src/app/components/advisor/top-experts/top-experts.component.css
+++ b/Web/src/app/components/advisor/top-experts/top-experts.component.css
@@ -3,11 +3,8 @@
 }
 
 .advisors-list advisor-card{
-    margin-left: 20px;
-}
-
-.advisors-list advisor-card:first-child{
-    margin-left: 0px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .section-filter{
