--- a/Web/src/app/components/util/newsletter/newsletter.component.html
+++ b/Web/src/app/components/util/newsletter/newsletter.component.html
@@ -1,3 +1,8 @@
-<p>
-  newsletter works!
-</p>
+<script type="text/javascript" src="//sgwidget.leaderapps.co/js/sendgrid-widget.js"></script>
+<div id="sendgrid-subscription-widget" class="sendgrid-subscription-widget" >
+  <form id="sg-widget" data-token="e2c37163dc95b4351b82ab699ae28b29" onsubmit="return false;">
+    <div class="sg-response" id="sg-response"></div>
+    <input id="email" type="email" name="email" placeholder="you@example.com" required>
+    <input type="submit" id="sg-submit-btn" value="Subscribe">
+  </form>
+</div>
