--- a/Web/src/app/components/home/home/home.component.html
+++ b/Web/src/app/components/home/home/home.component.html
@@ -1,3 +1,3 @@
 <recommendation-box-list></recommendation-box-list>
 <top-experts [resultsLimit]=4 [hideFilters]=true></top-experts>
-<trending-assets></trending-assets>
+<trending-assets class="global-container-min inverted"></trending-assets>
